Add before and sequence to BlockDelimiters/IgnoredMethods
This way we can write in the functional and procedural form.
E.g:

before { sign_in }

and

before do
  sign_in
  create_post
end

--- a/style/ruby/.rubocop.yml
+++ b/style/ruby/.rubocop.yml
@@ -106,6 +106,8 @@ Style/BlockDelimiters:
     - lambda
     - proc
     - it
+    - before
+    - sequence
 
 Metrics/BlockNesting:
   Description: 'Avoid excessive block nesting'
